--- a/webapp-one/pom.xml
+++ b/webapp-one/pom.xml
@@ -7,6 +7,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>webapp-one Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <defaultGoal>install</defaultGoal>
+  </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
