--- a/webapp-one/Jenkinsfile
+++ b/webapp-one/Jenkinsfile
@@ -11,8 +11,12 @@ pipeline {
       }
        stage("Maven Build") {
          steps {
-             
-             sh script: 'mvn -f webapp-one/pom.xml'
+             def mvnHome = tool name: 'Maven', type: 'maven'
+             sh "${mvnHome}/bin/mvn package"
+            
+            // sh script: 'mvn -f webapp-one/pom.xml'
+            
+            
          }
       } 
        
