--- a/webapp-one/Jenkinsfile
+++ b/webapp-one/Jenkinsfile
@@ -6,8 +6,8 @@ pipeline {
    stages {
       stage("Git Checkout") {
          steps {
-          //git 'https://github.com/tusharheda08/onewebapp.git/'
-            git 'https://github.com/tusharheda08/onewebapp'
+          git 'https://github.com/tusharheda08/onewebapp.git/'
+           // git 'https://github.com/tusharheda08/onewebapp'
             
          }
       }
